--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "manifest_version": 2,
   "name": "TwitchTime",
   "version": "0.1",
+  "applications": {
+    "gecko": {
+      "id": "twitchtime@notactuallytwitch.com",
+      "strict_min_version": "53.0"
+    }
+  },
 
   "description": "Adds an indicator of how long you have watched a Twitch channel.",
   "homepage_url": "https://github.com/swpease/TwitchTime",
@@ -12,6 +18,10 @@
       "matches": ["*://*.twitch.tv/*"],
       "js": ["content_scripts/content_script.js"]
     }
+  ],
+
+  "permissions": [
+    "storage"
   ]
 
 }
