--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,11 @@
   "description": "Adds an indicator of how long you have watched a Twitch channel.",
   "homepage_url": "https://github.com/swpease/TwitchTime",
 
+  "icons": {
+    "48": "icons/twitch-time-48.png",
+    "96": "icons/twitch-time-48@2x.png"
+  },
+
   "content_scripts": [
     {
       "matches": ["*://*.twitch.tv/*"],
