--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,12 @@
     }
   ],
 
+   "browser_action": {
+      "default_icon": "icons/twitch-time-48.png",
+      "default_title": "Twitch Time",
+      "default_popup": "popup/time_popup.html"
+    },
+
   "permissions": [
     "storage"
   ]
