--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "manifest_version": 2,
   "name": "TwitchTime",
-  "version": "0.1",
+  "version": "1.1",
   "applications": {
     "gecko": {
       "id": "twitchtime@notactuallytwitch.com",
@@ -25,6 +25,11 @@
       "css": ["content_scripts/content_script.css"]
     }
   ],
+
+  "options_ui": {
+    "page": "options/options.html",
+    "browser_style": true
+  },
 
   "permissions": [
     "storage"
