--- a/manifest.json
+++ b/manifest.json
@@ -34,16 +34,7 @@
       },
     "default_title": "Twitch Time",
     "default_popup": "popup/popup.html",
-    "browser_style": true,
-    "theme_icons": [{
-      "light": "icons/twitch-time-16-light.png",
-      "dark": "icons/twitch-time-16.png",
-      "size": 16
-    }, {
-      "light": "icons/twitch-time-32-light.png",
-      "dark": "icons/twitch-time-32.png",
-      "size": 32
-    }]
+    "browser_style": true
   },
 
   "options_ui": {
