--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "TwitchTime",
   "version": "1.1",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "twitchtime@notactuallytwitch.com",
       "strict_min_version": "53.0"
